<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GreenEnergyResearch</string>
    
	<string name="settings">Settings</string>
	
	<string name="resolution_label">Resolution</string>
	<string name="resolution_times"> x </string>
	<string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

	<string name="ip_setting_label">Address</string>
	<string name="port_setting_label">Port</string>
	<string name="command_setting_label">Command</string>
	
	<string name="digits_increment">+</string>
	<string name="digits_decrement">-</string>
	<string name="address_dot">.</string>
	<string name="port_80">80</string>
	<string name="port_8080">8080</string>
	<string name="port_80_with_explanation">80 (for Ai-ball)</string>
	<string name="port_8080_with_explanation">8080 (for IP Webcam)</string>	
	<string name="command_streaming">\?action=stream</string>
	<string name="command_videofeed">videofeed</string>
	<string name="command_streaming_with_explanation">\?action=stream (for Ai-ball)</string>
	<string name="command_videofeed_with_explanation">videofeed (for IP Webcam)</string>
	
	<string name="settings_done">Done</string>
	
	
	
	<string name="server_address">192.168.1.18</string>
    <string name="server_port">5001</string>
    <string name="server_password">admin</string>
    <string name="log">Logging</string>
    <string name="not_log">Not Logging</string>
    <string name="poll_milliseconds">1000</string>
    <string name="port">Port</string>
    <string name="todo">TODO</string>
    <string-array name="poll_data_spinner">
        <item>1 Second</item>
        <item>10 Seconds</item>
        <item>30 Seconds</item>
        <item>60 Seconds</item>
    </string-array>
    <string name="data_poll_frequency">Data Poll Frequency</string>
    <string name="email_address">Email Address</string>
    <!--<string name="email_address_value">info@greenenergyresearch.com</string>-->
    <string name="email_address_value">jamesfolk1@gmail.com</string>
    <string name="email_address_password">IgTiFmEl12$</string>
    <!--<string name="email_address_to">nickyaron@gmail.com</string>-->
    <string name="email_address_to">jamesfolk1@gmail.com</string>
</resources>
